add: adicionado a segunda atividade finalizada (30/01/25)

--- a/aula3/atividade2/html/atividade2.html
+++ b/aula3/atividade2/html/atividade2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Purimercado</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -14,34 +14,38 @@
         <div class="produto">
             <img src="../img/Melancia-01.jpg" alt="melancia"
             title="melancia" width="248" height="250">
-            <h1> Melancia </h1>
-            <p> Melancia - a unidade </p>
-            <span id="preco"> R$ 5,00 </span>
+            <h2> Melancia </h2>
+            <p> - kg R$ 20,00 - </p>
+            <span id="preco"> R$ 7,00 </span>
         </div>
 
         <div class="produto">
             <img src="../img/pessego.webp" alt="pessego"
             title="Pêssego" width="" height="250">
-            <h1> Pêssego </h1>
-            <p> Pêssego - a unidade </p>
-            <span id="preco"> R$ 10,00 </span>
+            <h2> Pêssego </h2>
+            <p> - kg R$ 30,00 - </p>
+            <span id="preco"> R$ 13,00 </span>
         </div>
 
         <div class="produto">
             <img src="../img/morango.jpg" alt="morango"
             title="Morango" width="255" height="250">
-            <h1> Morango </h1>
-            <p> Morango - a unidade </p>
-            <span id="preco"> R$ 4,00 </span>
+            <h2> Morango </h2>
+            <p> - kg R$ 30,00 - </p>
+            <span id="preco"> R$ 12,00 </span>
         </div>
 
         <div class="produto">
             <img src="../img/cereja.jpg" alt="pessego"
             title="Pêssego" width="255" height="250">
-            <h1> Cereja </h1>
-            <p> Cereja- kilo </p>
-            <span id="preco"> R$ 25,00 </span>
+            <h2> Cereja </h2>
+            <p> - kg R$ 38,00 - </p>
+            <span id="preco"> R$ 15,00 </span>
         </div>
+
+        <footer>
+            <p> &copy; 2025 Purimercado. Todos os direitos reservados.</p>
+        </footer>
     </main>
 </body>
 </html>
