--- a/aula4/atividade/html/index.html
+++ b/aula4/atividade/html/index.html
@@ -10,17 +10,52 @@
     <main>
         <section class="grid_container">
             <div class="grid_item">
-                <img src="../img/thriller1lp-removebg.png" alt="Disco de vinil de Thriller do Michael Jackson"
-                title="Michael Jackson - Thriller" width="330">
-                <h1> Thriller - Michael Jackson</h1>
-                <p> aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <h1> My Chemical Romance</h1>
+                <img src="../img/mcr2.jpeg"
+                title="My Chemical Romance" width="300" height="300">
+                <h3> The Black Parade </h3>
+                <p> Three Cheers for Sweet Revenge é o segundo álbum de estúdio da banda de rock americana My Chemical Romance, lançado em 8 de junho de 2004.</p>
             </div>
 
             <div class="grid_item">
-                <img src="../img/KISS_COTN_1LPHalfSpeedVinyl_Packshot-removebg-preview.png" alt="Disco de vinil de Thriller do Michael Jackson"
-                title="Michael Jackson - Thriller" width="400" height="500">
-                <h1> Thriller - Michael Jackson</h1>
-                <p> aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <h1> Evanescence </h1>
+                <img src="../img/evanescence.jpeg"
+                title="Evanescence" width="300" height="300">
+                <h3> Fallen </h3>
+                <p> Fallen é o álbum de estreia da banda de rock norte-americana Evanescence, lançado em 4 de março de 2003. </p>
+            </div>
+
+            <div class="grid_item">
+                <h1> Pierce The Veil </h1>
+                <img src="../img/piercetheveil.jpeg"
+                title="Pierce The Veil" width="300" height="300">
+                <h3> Collide With The Sky </h3>
+                <p> Collide with the Sky é o terceiro álbum de estúdio da banda americana de post-hardcore Pierce the Veil, lançado em 17 de julho de 2012.</p>
+            </div>
+
+            <div class="grid_item">
+                <h1>Avenged Sevenfold</h1>
+                <img src="../img/avengedsevenfold.jpeg"
+                title="Avenged Sevenfold" width="300" height="300">
+                <h3> Nightmare </h3>
+                <p> Nightmare é o quinto álbum de estúdio da banda norte-americana de heavy metal Avenged Sevenfold, lançado em 27 de julho de 2010.</p>
+            </div>
+            
+            <div class="grid_item">
+                <h1> Linkin Park </h1>
+                <img src="../img/lp.jpeg" 
+                title="Linkin Park" width="300" height="300">
+                <h3> Meteora </h3>
+                <p>Meteora é o segundo álbum de estúdio da banda americana de rock Linkin Park, lançado em 25 de Março de 2003</p>
+            </div>
+
+            <div class="grid_item">
+                <h1> Green Day </h1>
+                <img src="../img/greenday.jpeg"
+                title="Mazzy Star" width="300" height="300">
+                <h3> American Idiot </h3>
+                <p> American Idiot é o sétimo álbum de estúdio da banda americana Green Day. O seu lançamento ocorreu em 21 de setembro de 2004 </p>
+            </div>
         </section>
     </main>
 </body>
