add: adicionado para terminar

--- a/aula7-html/atividade2/index.html
+++ b/aula7-html/atividade2/index.html
@@ -34,30 +34,45 @@
         <section id="inicio"></section>  <!-- FAZER DEPOIS -->
 
         <section id="sobre">
-            <h1> Gerencie seu dinheiro de forma inteligente. </h1>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium obcaecati atque optio aliquam pariatur commodi quia velit dicta eligendi nesciunt ab explicabo laborum, doloremque ipsam suscipit ipsum quae veniam.</p>
+            <div class="sobre-texto">
+                <h1> Gerencie seu dinheiro de forma inteligente. </h1>
+                <p> Ter um bom nível de vida envolve cuidar bem do seu dinheiro. O gerenciador inteligente vai lhe ajudar a atingir esse objetivo de forma rápida e eficiente</p>
+                <p> Na ferramenta de controle de gastos, voce vai informar todos os seus gastos com custo de vida e tambem aqueles de rotina que surgem inesperadamente, até aquele cafézinho. Tem que registrar tudo.
+                    <p>O planejamento financeiro vai pegar todos os dado informados no controle de gastos, e por meio de uma inteligencia artificial, vai lhe das as soluçoes que, se colocado em prática, vai lhe dar o resultado esperado nas suas finanças.</p>
+                    O resultado final vai ser um relatório,tambem gerando por IA, que por meio de gráficos irá mostrar a evoluçao de onde voce estava e pra onde voce irá de forma inteligente equilibrando suas finaças.
+                </p>
+            </div>
             <img class="sobre-img" src="./img/gastos-3.webp" alt="contexto do que é o sistema"
             width="450">
         </section>
 
         <section id="funcionalidades">
-            <div class="funcionalidades-container">
-                <div class="recurso1">
-                    <h2> Controle de gastos </h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <div class="grid-funcionalidades-container">
+                <div class="recurso">
+                    <div class="recurso-texto">
+                        <h2> Controle de gastos </h2>
+                        <p> Monitore suas receitas e despesas. </p>
+                    </div>
                 </div>
-                <div class="recurso2">
-                    <h2> Planejamento financeiro </h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <div class="recurso">
+                    <div class="recurso-texto">
+                        <h2> Planejamento financeiro </h2>
+                        <p> Defina metas de economia. </p>
+                    </div>
                 </div>
-                <div class="recurso3">
-                    <h2> Relatórios interativos </h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <div class="recurso">
+                    <div class="recurso-texto">
+                        <h2> Relatórios interativos </h2>
+                        <p> Veja gráfico dos seus gastos. </p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
+        <section id="contato">
+            <h2> Contato </h2>
+        </section>
         <section class="contato">
             <div class="email">
                 <img class="email-icon" src="./icon/icons8-mensagem-50.png" alt="icone de email" width="20" height="20">
