--- a/aula7-html/atividade2/login.html
+++ b/aula7-html/atividade2/login.html
@@ -7,6 +7,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> VOCE QUEIMA SUA BEIRADINHA </h1>
+    <header>
+        <div class="logo">
+            <h2> Finanças Inteligente </h2>
+            <img class="logo-img" src="./img/aumentar.png" alt="logo do sistema"
+            width="100" height="90"> 
+        </div>
+
+        <nav>
+            <ul>
+                <li> <a href="#inicio"> Início </a></li>
+                <li> <a href="#sobre"> Sobre </a></li>
+                <li> <a href="#funcionalidades"> Funcionalidades</a></li>
+                <li> <a href="#contato"> Contato </a></li>
+            </ul>
+        </nav>
+        
+        <div class="login">
+            <a href="login.html">
+                <h4> Login </h4>
+            </a>
+        </div>
+    </header>
+    <main>
+        <div class="login-container"></div>
+    </main>
+    <footer>
+        <section id="contato">
+            <h2> Contato </h2>
+        </section>
+        <section class="contato">
+            <div class="email">
+                <img class="email-icon" src="./icon/icons8-mensagem-50.png" alt="icone de email" width="20" height="20">
+                <h4> finacasinteligente@gmail.com</h4>
+            </div>
+            <div class="telefone">
+                <img class="telefone-icon" src="./icon/icons8-telefone-50.png" alt="icone de telefone" width="20" height="20">
+                <h4> (84) 91234-5678 </h4>
+            </div>
+            <div class="twitter">
+                <img class="twitter-icon" src="./icon/icons8-twitter-50.png" alt="icone do twitter" width="20" height="20">
+                <h4> @financente</h4>
+            </div>
+            <div class="instagram">
+                <img class="instagram-icon" src="./icon/icons8-instagram-24.png" alt="icone do instagram" width="20" height="20">
+                <h4> @financente</h4>
+            </div>
+        </section>
+        <p> &copy; 2025 Finanças Inteligente. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
