add: adicionado segunda atividade finalizada

--- a/aula7-html/atividade2/login.html
+++ b/aula7-html/atividade2/login.html
@@ -30,9 +30,24 @@
         </div>
     </header>
     <main>
-        <div class="login-container"></div>
+        <div class="login-container">
+            <h1> Faça o seu login. </h1>
+            <div class="email-senha">
+                <label> E-mail: </label>
+                <input type="email" placeholder=" Digite o seu email">
+                <label> Senha: </label>
+                <input type="password" placeholder=" Digite sua senha">
+            </div>
+            
+            <div class="entrar-button">
+                <a href="index.html">
+                    <h3>Entrar</h3>
+                </a>
+            </div>
+        </div>
     </main>
     <footer>
+        <section class="footer-login">
         <section id="contato">
             <h2> Contato </h2>
         </section>
@@ -53,6 +68,7 @@
                 <img class="instagram-icon" src="./icon/icons8-instagram-24.png" alt="icone do instagram" width="20" height="20">
                 <h4> @financente</h4>
             </div>
+        </section>
         </section>
         <p> &copy; 2025 Finanças Inteligente. Todos os direitos reservados.</p>
     </footer>
